# Examen-Parcial-3-Daniel-Alves

./: CMakeLists.txt  Codigo.cpp  Programa.cpp  README.md  main.cpp
Actor/: Actor.cpp  Actor.h
Crud/: Crud.cpp
Launcher/: Launcher.h
Tarea/: Tarea.cpp
src/Actor/: Actor.h
src/Crud/: Crud.h
src/Launcher/: Launcher.cpp  Launcher.h
src/Tarea/: Tarea.h
